--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,13 @@ body > * {
   background-size: 100% 6px;
 }
 
+.email {
+  color: #1A71D2;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
 /* Grid styles */
 .container {
   max-width: 1140px;
@@ -295,6 +302,54 @@ button {
   display: flex;
   justify-content: center;
   margin-top: -156px;
+}
+
+.header-skills {
+  margin-top: -32px;
+  padding-bottom: 90px;
+}
+
+.header-skills__col .h3 {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.3;
+  margin-bottom: 30px;
+}
+
+.header-skills__list {
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.3;
+}
+
+.header-skills__list li {
+  margin-bottom: 11px;
+}
+
+.header-skills__list li:last-child {
+  margin-bottom: 0;
+}
+
+.header-skills__list li::before {
+  content: '\2014';
+  margin-right: 5px;
+}
+@media (max-width: 1199px) {
+  .header-skills__list li::before {
+    display: none;
+  }
+}
+
+.header-skills__socilas {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  margin-bottom: 13px;
+  margin-right: 85px;
+}
+
+.portfolio {
+  padding: 80px 0 90px;
 }
 
 /*# sourceMappingURL=main.css.map */
