--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -82,6 +82,13 @@ section {
     background-size: 100% 6px;
 }
 
+.email {
+    color: #1A71D2;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.3;
+}
+
 /* Grid styles */
 
 .container {
