--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,4 +12,5 @@
 @import "./sections/header-content";
 @import "./sections/skills";
 @import "./sections/portfolio";
+@import "./sections/contacts";
 
