--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -1,34 +1,62 @@
 .portfolio {
     padding: 80px 0 90px;
+    background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
 }
 
 .portfolio-title {
-
+    margin-bottom: 65px;
+    .h2 {
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 1.3; 
+    }
 }
 
-.h2 {
-
-}
-
-.grad-border {
-
-}
 .portofolio-wrapper {
-
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
 }
+
 
 .portfolio-card {
+    .portfolio-card__img {
+        margin-bottom: 16px;
+    }
 
+    .portfolio-card__text {
+        line-height: 1.3;
+        .h4 {
+            font-size: 24px;
+            font-weight: 600;
+            margin-bottom: 6px;
+        }
+
+        p {
+            font-size: 18px;
+            font-weight: 400;
+        }
+    }
 }
 
-.portfolio-card__img {
+.portfolio-card:first-child, .portfolio-card:nth-child(2) {
+    margin-bottom: 50px;
 
-}
+    .portfolio-card__img {
+        margin-bottom: 20px;
+    }
 
-.portfolio-card__text {
+    .portfolio-card__text {
+        line-height: 1.3;
+        .h4 {
+            font-size: 30px;
+            font-weight: 600;
+            margin-bottom: 8px;
+        }
 
-}
-
-.h4 {
-
+        p {
+            font-size: 20px;
+            font-weight: 400;
+        }
+    }
 }
