--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,5 +12,6 @@
 @import "./sections/header-content";
 @import "./sections/skills";
 @import "./sections/portfolio";
+@import "./sections/timeline";
 @import "./sections/contacts";
 
