--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -128,6 +129,12 @@ body > * {
   height: 48px;
 }
 
+.h2 {
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
 .btn {
   color: #000;
   font-size: 20px;
@@ -140,6 +147,13 @@ body > * {
 
 .btn--light {
   background-color: #EFF7FC;
+}
+
+.socials {
+  display: flex;
+  align-items: center;
+  column-gap: 30px;
+  margin-bottom: 13px;
 }
 
 .flex-wrapper {
@@ -309,6 +323,15 @@ button {
   padding-bottom: 90px;
 }
 
+.header-skills__wrapper {
+  display: flex;
+  column-gap: 31px;
+}
+
+.header-skills__col:first-child {
+  width: 635px;
+}
+
 .header-skills__col .h3 {
   font-size: 42px;
   font-weight: 700;
@@ -340,14 +363,6 @@ button {
   }
 }
 
-.socials {
-  display: flex;
-  align-items: center;
-  column-gap: 30px;
-  margin-bottom: 13px;
-  margin-right: 85px;
-}
-
 .portfolio {
   padding: 80px 0 90px;
   background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
@@ -355,11 +370,7 @@ button {
 
 .portfolio-title {
   margin-bottom: 65px;
-}
-.portfolio-title .h2 {
-  font-size: 54px;
-  font-weight: 700;
-  line-height: 1.3;
+  text-align: center;
 }
 
 .portofolio-wrapper {
@@ -401,6 +412,110 @@ button {
 .portfolio-card:first-child .portfolio-card__text p, .portfolio-card:nth-child(2) .portfolio-card__text p {
   font-size: 20px;
   font-weight: 400;
+}
+
+.timeline {
+  padding: 70px 0 90px;
+}
+
+.section-title {
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.timeline-wrapper {
+  width: 850px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.timeline-item__title {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 1.3;
+}
+
+.timeline-item {
+  width: 50%;
+  padding-bottom: 60px;
+  position: relative;
+}
+.timeline-item:last-child {
+  padding-bottom: 0;
+}
+.timeline-item:before, .timeline-item:after {
+  content: '';
+  position: absolute;
+}
+.timeline-item:before {
+  width: 4px;
+  top: 0;
+  bottom: 0;
+  background-color: #E1EEF4;
+}
+.timeline-item:after {
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  border: 4px solid #E1EEF4;
+  top: 0;
+  background-color: #fff;
+}
+
+.timeline-item:last-child::before {
+  display: none;
+}
+
+/* нечетные 2n+1*/
+.timeline-item:nth-child(odd) {
+  padding-right: 56px;
+  text-align: right;
+}
+.timeline-item:nth-child(odd):before {
+  right: -2px;
+}
+.timeline-item:nth-child(odd):after {
+  right: -17px;
+}
+@media (max-width: 899px) {
+  .timeline-item:nth-child(odd) {
+    padding-left: 44px;
+    text-align: left;
+    margin: 0 auto;
+  }
+  .timeline-item:nth-child(odd):before {
+    right: auto;
+    left: 15px;
+  }
+  .timeline-item:nth-child(odd):after {
+    right: auto;
+    left: 0;
+  }
+}
+
+/* четные 2n*/
+.timeline-item:nth-child(even) {
+  margin-left: auto;
+  padding-left: 56px;
+}
+.timeline-item:nth-child(even):before {
+  left: -2px;
+}
+.timeline-item:nth-child(even):after {
+  left: -17px;
+}
+@media (max-width: 899px) {
+  .timeline-item:nth-child(even) {
+    margin-left: 0;
+    margin: 0 auto;
+    padding-left: 44px;
+  }
+  .timeline-item:nth-child(even):before {
+    left: 15px;
+  }
+  .timeline-item:nth-child(even):after {
+    left: 0;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
