--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -44,6 +44,12 @@ section {
     height: 48px;
 }
 
+.h2 {
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 1.3; 
+}
+
 .btn {
     color: #000;
     font-size: 20px;
@@ -57,6 +63,13 @@ section {
 
 .btn--light {
     background-color: #EFF7FC;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    column-gap: 30px;
+    margin-bottom: 13px;
 }
 
 .flex-wrapper {
