--- a/sass/sections/_portfolio.scss
+++ b/sass/sections/_portfolio.scss
@@ -5,11 +5,7 @@
 
 .portfolio-title {
     margin-bottom: 65px;
-    .h2 {
-    font-size: 54px;
-    font-weight: 700;
-    line-height: 1.3; 
-    }
+    text-align: center;
 }
 
 .portofolio-wrapper {
