--- a/sass/sections/_skills.scss
+++ b/sass/sections/_skills.scss
@@ -3,6 +3,15 @@
     padding-bottom: 90px;
 }
 
+.header-skills__wrapper {
+    display: flex;
+    column-gap: 31px;
+}
+
+.header-skills__col:first-child {
+    width: 635px;
+}
+
 .header-skills__col .h3 {
     font-size: 42px;
     font-weight: 700;
@@ -33,12 +42,6 @@
     }
 }
 
-.socials {
-    display: flex;
-    align-items: center;
-    column-gap: 30px;
-    margin-bottom: 13px;
-    margin-right: 85px;
-}
+
 
 
