--- a/sass/base/_vars.scss
+++ b/sass/base/_vars.scss
@@ -1,3 +1,5 @@
-$accent-color: #f78434;
-$accent-color-hover: #ff6a00;
+$accent-color: #FBDC4D;
+$accent-color-link: #1A71D2;
+$accent-color-hover: #f7cb06;
+$accent-color-hover-light: #a9bac4;
 $black-color: #323232;
