--- a/css/main.css
+++ b/css/main.css
@@ -127,6 +127,10 @@ body > * {
 .svg-fb, .svg-vk, .svg-tg, .svg-inst, .svg-ws {
   width: 48px;
   height: 48px;
+  transition: all 0.4s ease-in;
+}
+.svg-fb:hover, .svg-vk:hover, .svg-tg:hover, .svg-inst:hover, .svg-ws:hover {
+  transform: scale(0.88);
 }
 
 .h2 {
@@ -143,10 +147,24 @@ body > * {
   border-radius: 50px;
   padding: 19px 40px;
   background-color: #FBDC4D;
+  transition: all 0.4s ease-in;
+}
+
+.btn:hover {
+  background-color: #f7cb06;
+  color: #fff;
 }
 
 .btn--light {
   background-color: #EFF7FC;
+}
+
+.btn--light:hover {
+  background-color: #a9bac4;
+}
+
+.btn:active {
+  transform: scale(0.98);
 }
 
 .socials {
@@ -166,7 +184,7 @@ body > * {
   background-repeat: no-repeat;
   background-position: center bottom 15px;
   background-size: 100% 10px;
-  background-image: linear-gradient(to right, #fbdc4d, #fbdc4d);
+  background-image: linear-gradient(to right, #FBDC4D, #FBDC4D);
 }
 
 .h2.grad-border {
@@ -183,7 +201,14 @@ body > * {
   color: #1A71D2;
   font-size: 22px;
   font-weight: 400;
-  line-height: 1.3;
+  line-height: 1.6;
+}
+
+.telephone {
+  color: #1A71D2;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.6;
 }
 
 /* Grid styles */
@@ -246,9 +271,6 @@ button {
   margin-top: auto;
   /* sticky footer */
   /* Just for fun */
-  text-align: center;
-  background-color: #e2e2e2;
-  padding: 50px 0;
 }
 
 .header {
@@ -282,6 +304,30 @@ button {
   align-items: center;
 }
 
+.footer {
+  background-color: #333333;
+  padding: 40px 0 50px;
+  color: #fff;
+}
+
+.footer__corypthing span {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 1.4;
+  margin-bottom: 10px;
+}
+.footer__corypthing p {
+  color: #B0B0B0;
+  font-size: 16px;
+  line-height: 1.5;
+}
+.footer__corypthing a {
+  font-size: 16px;
+  line-height: 1.5;
+  text-decoration-line: underline;
+  color: #fff;
+}
+
 .header-content-text {
   width: 540px;
   margin-top: 19px;
@@ -307,6 +353,8 @@ button {
 }
 
 .header-content__photo {
+  width: 475px;
+  height: 410px;
   box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
 }
 
@@ -381,6 +429,8 @@ button {
 
 .portfolio-card .portfolio-card__img {
   margin-bottom: 16px;
+  width: 350px;
+  height: 220px;
 }
 .portfolio-card .portfolio-card__text {
   line-height: 1.3;
@@ -400,6 +450,8 @@ button {
 }
 .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
   margin-bottom: 20px;
+  width: 540px;
+  height: 370px;
 }
 .portfolio-card:first-child .portfolio-card__text, .portfolio-card:nth-child(2) .portfolio-card__text {
   line-height: 1.3;
@@ -516,6 +568,63 @@ button {
   .timeline-item:nth-child(even):after {
     left: 0;
   }
+}
+
+.contacts {
+  position: relative;
+  padding: 70px 0 90px;
+  background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+}
+
+.contacts::before {
+  content: "";
+  background-image: url("./img/bg/contacts.png");
+}
+
+.contacts-wrapper {
+  display: flex;
+  column-gap: 69px;
+}
+
+.contacts__col {
+  position: relative;
+}
+
+.contacts-list__item {
+  display: flex;
+  margin-bottom: 22px;
+}
+
+.contacts-list__item span {
+  min-width: 190px;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 1.6;
+}
+
+.contacts-list__item:last-child {
+  margin-bottom: 0;
+}
+
+.contact-socials {
+  margin-top: 34px;
+}
+
+.contacts-text {
+  width: 538px;
+  font-size: 18px;
+  line-height: 1.6;
+}
+
+.contacts__col:last-child::before {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 280px;
+  height: 243px;
+  background-image: url("../img/before/contacts.png");
+  top: -60%;
+  right: -20%;
 }
 
 /*# sourceMappingURL=main.css.map */
