--- a/sass/sections/_skills.scss
+++ b/sass/sections/_skills.scss
@@ -19,6 +19,10 @@
     margin-bottom: 30px;
 }
 
+.socials-wrapper {
+    margin-bottom: 13px;
+}
+
 .header-skills__list {
     font-size: 22px;
     font-weight: 400;
