--- a/css/main.css
+++ b/css/main.css
@@ -133,12 +133,6 @@ body > * {
   transform: scale(0.88);
 }
 
-.h2 {
-  font-size: 54px;
-  font-weight: 700;
-  line-height: 1.3;
-}
-
 .btn {
   color: #000;
   font-size: 20px;
@@ -171,7 +165,6 @@ body > * {
   display: flex;
   align-items: center;
   column-gap: 30px;
-  margin-bottom: 13px;
 }
 
 .flex-wrapper {
@@ -197,14 +190,13 @@ body > * {
   background-size: 100% 6px;
 }
 
-.email {
-  color: #1A71D2;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 1.6;
+.h2 {
+  font-size: 54px;
+  font-weight: 700;
+  line-height: 1.3;
 }
 
-.telephone {
+.connection {
   color: #1A71D2;
   font-size: 22px;
   font-weight: 400;
@@ -245,12 +237,7 @@ body > * {
   }
 }
 
-button {
-  background-color: #FBDC4D;
-  border-radius: 50%;
-}
-
-.svg-fb,
+/* Utility */
 .none {
   display: none !important;
 }
@@ -296,6 +283,12 @@ button {
   font-size: 20px;
   font-weight: 600;
   line-height: 1.3;
+  transition: all 0.4s ease-in;
+}
+
+.nav-list__item:hover {
+  transform: scale(0.88);
+  color: #030303;
 }
 
 .header-social {
@@ -310,22 +303,30 @@ button {
   color: #fff;
 }
 
-.footer__corypthing span {
-  display: inline-block;
-  font-size: 16px;
-  line-height: 1.4;
-  margin-bottom: 10px;
-}
 .footer__corypthing p {
   color: #B0B0B0;
   font-size: 16px;
   line-height: 1.5;
+}
+.footer__corypthing p span {
+  color: #fff;
+  display: block;
+  font-size: 16px;
+  line-height: 1.4;
+  margin-bottom: 10px;
+}
+.footer__corypthing p + p {
+  margin-bottom: 15px;
 }
 .footer__corypthing a {
   font-size: 16px;
   line-height: 1.5;
   text-decoration-line: underline;
   color: #fff;
+  transition: all 0.4s ease-in;
+}
+.footer__corypthing a:hover {
+  transform: scale(0.95);
 }
 
 .header-content-text {
@@ -387,6 +388,10 @@ button {
   margin-bottom: 30px;
 }
 
+.socials-wrapper {
+  margin-bottom: 13px;
+}
+
 .header-skills__list {
   font-size: 22px;
   font-weight: 400;
@@ -425,12 +430,13 @@ button {
   display: flex;
   flex-wrap: wrap;
   column-gap: 30px;
+  row-gap: 30px;
 }
 
 .portfolio-card .portfolio-card__img {
   margin-bottom: 16px;
-  width: 350px;
-  height: 220px;
+  max-width: 350px;
+  max-height: 220px;
 }
 .portfolio-card .portfolio-card__text {
   line-height: 1.3;
@@ -446,12 +452,12 @@ button {
 }
 
 .portfolio-card:first-child, .portfolio-card:nth-child(2) {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
   margin-bottom: 20px;
-  width: 540px;
-  height: 370px;
+  max-width: 540px;
+  max-height: 370px;
 }
 .portfolio-card:first-child .portfolio-card__text, .portfolio-card:nth-child(2) .portfolio-card__text {
   line-height: 1.3;
@@ -574,11 +580,6 @@ button {
   position: relative;
   padding: 70px 0 90px;
   background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
-}
-
-.contacts::before {
-  content: "";
-  background-image: url("./img/bg/contacts.png");
 }
 
 .contacts-wrapper {
