--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -49,13 +49,6 @@ section {
     }
 }
 
-
-.h2 {
-    font-size: 54px;
-    font-weight: 700;
-    line-height: 1.3; 
-}
-
 .btn {
     color: #000;
     font-size: 20px;
@@ -89,7 +82,6 @@ section {
     display: flex;
     align-items: center;
     column-gap: 30px;
-    margin-bottom: 13px;
 }
 
 .flex-wrapper {
@@ -115,18 +107,17 @@ section {
     background-size: 100% 6px;
 }
 
-.email {
+.h2 {
+    font-size: 54px;
+    font-weight: 700;
+    line-height: 1.3; 
+}
+
+.connection {
     color: $accent-color-link;
     font-size: 22px;
     font-weight: 400;
     line-height: 1.6;
-}
-
-.telephone {
-    color: $accent-color-link;
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 1.6; 
 }
 
 /* Grid styles */
@@ -163,12 +154,11 @@ section {
     }
 }
 
-button {
-    background-color: $accent-color;
-    border-radius: 50%;
-}
+// button {
+//     background-color: $accent-color;
+//     border-radius: 50%;
+// }
 
-.svg-fb,
 
 /* Utility */
 
