--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -21,6 +21,12 @@
     font-size: 20px;
     font-weight: 600;
     line-height: 1.3;
+    transition: all 0.4s ease-in;
+}
+
+.nav-list__item:hover {
+    transform: scale(0.88);
+    color: #030303;
 }
 
 .header-social {
