--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -6,22 +6,18 @@
 
 
 .footer__corypthing {
+	p:first-child {
+		color: #fff;
+		display: block;
+		font-size: 16px;
+		line-height: 1.4; 
+		margin-bottom: 10px;	
+	}
+
 	p {
 		color: #B0B0B0;
 		font-size: 16px;
 		line-height: 1.5;
-
-		span {
-			color: #fff;
-			display: block;
-			font-size: 16px;
-			line-height: 1.4; 
-			margin-bottom: 10px;
-		}
-	}
-
-	p + p {
-		margin-bottom: 15px;
 	}
 
 	a {
