--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,6 +26,7 @@ body > * {
 }
 
 section {
+    
 	// position: relative;
 }
 
@@ -82,6 +83,10 @@ section {
     display: flex;
     align-items: center;
     column-gap: 30px;
+
+    li {
+        display: flex
+    };
 }
 
 .flex-wrapper {
@@ -113,7 +118,7 @@ section {
     line-height: 1.3; 
 }
 
-.connection {
+.link {
     color: $accent-color-link;
     font-size: 22px;
     font-weight: 400;
@@ -138,6 +143,8 @@ section {
         padding: 0;
     }
 
+    
+
     /* Tablet */
     @media (max-width: 1199px) {
         width: 900px;
@@ -152,6 +159,21 @@ section {
     @media (max-width: 599px) {
         width: 320px;
     }
+
+        // /* Tablet big*/
+        // @media (max-width: 1139px) {
+        //     width: 900px;
+        // }
+    
+        // /* Tablet */
+        // @media (max-width: 899px) {
+        //     width: 768px;
+        // }
+    
+        // /* Mobile */
+        // @media (max-width: 767px) {
+        //     width: 320px;
+        // }
 }
 
 // button {
