--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,10 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
+.lock {
+  overflow: hidden;
+}
+
 body > * {
   flex-shrink: 0;
   /* sticky footer */
@@ -118,6 +122,12 @@ body > * {
   width: 42px;
   height: 42px;
 }
+@media (max-width: 1199px) {
+  .svg-git {
+    width: 36px;
+    height: 36px;
+  }
+}
 
 .svg-ln {
   width: 32px;
@@ -125,12 +135,19 @@ body > * {
 }
 
 .svg-fb, .svg-vk, .svg-tg, .svg-inst, .svg-ws {
+  display: flex;
   width: 48px;
   height: 48px;
   transition: all 0.4s ease-in;
 }
 .svg-fb:hover, .svg-vk:hover, .svg-tg:hover, .svg-inst:hover, .svg-ws:hover {
   transform: scale(0.88);
+}
+@media (max-width: 899px) {
+  .svg-fb, .svg-vk, .svg-tg, .svg-inst, .svg-ws {
+    width: 38px;
+    height: 38px;
+  }
 }
 
 .btn {
@@ -143,6 +160,11 @@ body > * {
   background-color: #FBDC4D;
   transition: all 0.4s ease-in;
 }
+@media (max-width: 1199px) {
+  .btn {
+    padding: 16px 26px;
+  }
+}
 
 .btn:hover {
   background-color: #f7cb06;
@@ -151,6 +173,11 @@ body > * {
 
 .btn--light {
   background-color: #EFF7FC;
+}
+@media (max-width: 1199px) {
+  .btn--light {
+    padding: 16px 26px;
+  }
 }
 
 .btn--light:hover {
@@ -166,8 +193,11 @@ body > * {
   align-items: center;
   column-gap: 30px;
 }
-.socials li {
-  display: flex;
+@media (max-width: 899px) {
+  .socials {
+    column-gap: 20px;
+    margin-bottom: 20px;
+  }
 }
 
 .flex-wrapper {
@@ -181,6 +211,11 @@ body > * {
   background-position: center bottom 15px;
   background-size: 100% 10px;
   background-image: linear-gradient(to right, #FBDC4D, #FBDC4D);
+}
+@media (max-width: 599px) {
+  .grad-border {
+    background-position: center bottom 8px;
+  }
 }
 
 .h2.grad-border {
@@ -240,6 +275,12 @@ body > * {
   }
 }
 
+/* Mobile */
+@media (max-width: 899px) {
+  .header .container {
+    width: 100%;
+  }
+}
 /* Utility */
 .none {
   display: none !important;
@@ -264,35 +305,151 @@ body > * {
 }
 
 .header {
-  padding: 68px 0 82px;
+  position: relative;
+  padding: 60px 0 82px;
+}
+@media (max-width: 1199px) {
+  .header {
+    padding-bottom: 60px;
+  }
+}
+@media (max-width: 899px) {
+  .header {
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
 }
 
-.header-wrapper {
+.header-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.nav {
+.header-logo {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1;
+}
+
+@media (max-width: 899px) {
+  .toggle-menu {
+    z-index: 6;
+    position: absolute;
+    right: 15px;
+    width: 40px;
+    height: 25px;
+    cursor: pointer;
+  }
+  .toggle-menu span {
+    position: absolute;
+    width: 40px;
+    height: 5px;
+    background-color: #000;
+    transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
+  }
+  .toggle-menu span:nth-child(1) {
+    transform: translateY(10px);
+  }
+  .toggle-menu span:nth-child(3) {
+    transform: translateY(20px);
+  }
+  .toggle-menu.active span:nth-child(2) {
+    transform: translateY(10px) rotate(45deg);
+  }
+  .toggle-menu.active span:nth-child(1) {
+    opacity: 0;
+  }
+  .toggle-menu.active span:nth-child(3) {
+    transform: translateY(10px) rotate(-45deg);
+  }
+}
+.header-logo, .toggle-menu {
+  display: none;
+}
+@media (max-width: 899px) {
+  .header-logo, .toggle-menu {
+    display: flex;
+  }
+}
+
+@media (max-width: 899px) {
+  .header-menu {
+    position: fixed;
+    display: flex;
+    justify-content: flex-end;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    background-color: rgba(37, 73, 116, 0.8);
+    z-index: 5;
+    transform: translateX(100%);
+    transition: transform 0.3s;
+  }
+  .header-menu.open {
+    transform: translateX(0);
+  }
+  .header-menu .header-menu__content {
+    padding: 30px 15px 40px;
+    background-color: #fff;
+    width: 320px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+.header-menu__content ul {
   display: flex;
   align-items: center;
 }
-
-.nav-list {
-  display: flex;
-  column-gap: 100px;
+@media (max-width: 899px) {
+  .header-menu__content ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
-.nav-list__item {
+.header-menu__content li {
   font-size: 20px;
   font-weight: 600;
   line-height: 1.3;
+  margin-right: 50px;
   transition: all 0.4s ease-in;
 }
+@media (max-width: 1199px) {
+  .header-menu__content li {
+    font-size: 18px;
+  }
+}
+@media (max-width: 899px) {
+  .header-menu__content li {
+    margin-bottom: 28px;
+  }
+}
 
-.nav-list__item:hover {
+.header-menu__content li:last-child {
+  margin-right: 0;
+}
+@media (max-width: 1199px) {
+  .header-menu__content li:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.header-menu__content li:hover {
   transform: scale(0.88);
   color: #030303;
+}
+
+.header-menu__contacts {
+  display: none;
+}
+@media (max-width: 899px) {
+  .header-menu__contacts {
+    display: block;
+  }
 }
 
 .header-social {
@@ -300,89 +457,20 @@ body > * {
   column-gap: 26px;
   align-items: center;
 }
-
-.header-logo {
-  display: none;
-  font-size: 20px;
-  font-weight: 700;
-  line-height: 100%;
-}
-
-.header__burger-menu {
-  display: none;
-  position: relative;
-  width: 40px;
-  height: 25px;
-}
-
-.header__burger-menu span {
-  position: absolute;
-  width: 40px;
-  height: 5px;
-  background-color: #000;
-  left: 0;
-}
-
-.header__burger-menu span:nth-child(1) {
-  transform: translateY(-10px);
-}
-
-.header__burger-menu span:nth-child(3) {
-  transform: translateY(10px);
-}
-
-.socials {
-  display: none;
-}
-
-.link {
-  display: none;
-}
-
-/* Tablet */
-/* Mobile */
 @media (max-width: 899px) {
-  .header-logo {
-    display: block;
-  }
-
   .header-social {
     display: none;
   }
-
-  .header__burger-menu {
-    display: block;
-  }
-
-  .nav {
-    width: 320px;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    right: 0;
-    top: 0;
-    background-color: blueviolet;
-    padding: 30px 15px 40px;
-  }
-  .nav .nav-list {
-    display: block;
-  }
-
-  .socials {
-    display: flex;
-    column-gap: 20px;
-  }
-
-  .svg-inst {
-    width: 40.5px;
-    height: 40.5px;
-  }
-
-  .link {
-    display: block;
-  }
 }
-/* Mobile XS */
+
+.header-social a {
+  transition: all 0.4s ease-in;
+}
+
+.header-social a:hover {
+  transform: scale(0.88);
+}
+
 .footer {
   background-color: #333333;
   padding: 40px 0 50px;
@@ -412,9 +500,38 @@ body > * {
   transform: scale(0.95);
 }
 
+.header-content__wrapper {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+@media (max-width: 599px) {
+  .header-content__wrapper {
+    flex-direction: column;
+  }
+}
+
 .header-content-text {
   width: 540px;
   margin-top: 19px;
+}
+@media (max-width: 1199px) {
+  .header-content-text {
+    width: 420px;
+    margin-top: 8px;
+  }
+}
+@media (max-width: 899px) {
+  .header-content-text {
+    width: 350px;
+    margin-top: 39px;
+  }
+}
+@media (max-width: 599px) {
+  .header-content-text {
+    margin-top: 0;
+    width: 290px;
+  }
 }
 
 .header-content__title {
@@ -422,6 +539,26 @@ body > * {
   font-weight: 700;
   line-height: 1;
   margin-bottom: 30px;
+}
+@media (max-width: 1199px) {
+  .header-content__title {
+    font-size: 58px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 899px) {
+  .header-content__title {
+    font-size: 42px;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 599px) {
+  .header-content__title {
+    font-size: 32px;
+    margin-bottom: 20px;
+    padding-bottom: 250px;
+    width: 64px;
+  }
 }
 
 .header-content__descr {
@@ -431,15 +568,50 @@ body > * {
   line-height: 1.6;
   margin-bottom: 30px;
 }
+@media (max-width: 1199px) {
+  .header-content__descr {
+    font-size: 18px;
+  }
+}
+@media (max-width: 899px) {
+  .header-content__descr {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 899px) {
+  .header-content__btn {
+    display: none;
+  }
+}
 
 .header-content__btn > *:first-child {
   margin-right: 20px;
 }
 
 .header-content__photo {
-  width: 475px;
-  height: 410px;
+  max-width: 475px;
+  max-height: 410px;
   box-shadow: 40px 40px rgba(255, 255, 255, 0.5);
+}
+@media (max-width: 1199px) {
+  .header-content__photo {
+    max-width: 376px;
+    max-height: 325px;
+  }
+}
+@media (max-width: 899px) {
+  .header-content__photo {
+    max-width: 290px;
+    max-height: 250px;
+  }
+}
+@media (max-width: 599px) {
+  .header-content__photo {
+    position: absolute;
+    z-index: -1;
+    margin-top: 84px;
+  }
 }
 
 .header-content__banner {
@@ -448,6 +620,11 @@ body > * {
   display: flex;
   justify-content: center;
   margin-top: -156px;
+}
+@media (max-width: 599px) {
+  .header-content__banner {
+    margin-top: 0;
+  }
 }
 
 .header-skills {
