--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,133 +1,170 @@
 .header{
-    padding: 68px 0 82px;
+    position: relative;
+    padding: 60px 0 82px;
+
+    @media (max-width: 1199px) {
+        padding-bottom: 60px;
+    }
+    // Mobile
+    @media(max-width: 899px) {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
 
-.header-wrapper {
+.header-nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav {
+.header-logo {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1;
+}
+
+@media(max-width: 899px) {
+    .toggle-menu {
+        z-index: 6;
+        position: absolute;
+        right: 15px;
+        width: 40px;
+        height: 25px;
+        cursor: pointer;
+        & span {
+            position: absolute;
+            width: 40px;
+            height: 5px;
+            background-color: #000;
+            transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
+        }
+    
+        & span:nth-child(1) {
+            transform: translateY(10px);
+        } 
+        & span:nth-child(3) {
+            transform: translateY(20px);
+        } 
+    
+        &.active span:nth-child(2){
+            transform: translateY(10px) rotate(45deg);
+        }
+        
+        &.active span:nth-child(1){
+            opacity: 0;
+        }
+        
+        &.active span:nth-child(3){
+            transform: translateY(10px)rotate(-45deg);
+        }
+    }
+
+}
+
+.header-logo, .toggle-menu {
+    display: none;
+    @media(max-width: 899px) {
+        display: flex;
+    }
+}
+
+.header-menu {
+    @media(max-width: 899px) {
+        position: fixed;
+        display: flex;
+        justify-content: flex-end;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        background-color: rgba(37, 73, 116, 0.80);
+        z-index: 5;
+        transform: translateX(100%);
+        transition: transform 0.3s;
+        &.open {
+            transform: translateX(0)
+        }
+
+        .header-menu__content {
+            padding: 30px 15px 40px;
+            background-color: #fff;
+            width: 320px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+    }
+}
+
+
+
+.header-menu__content ul{
     display: flex;
     align-items: center;
+
+    @media(max-width: 899px) {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
 
-.nav-list {
-    display: flex;
-    column-gap: 100px;
-}
-
-.nav-list__item {
+.header-menu__content li{
     font-size: 20px;
     font-weight: 600;
-    line-height: 1.3;
+    line-height: 1.3; 
+    margin-right: 50px;
     transition: all 0.4s ease-in;
+
+    @media (max-width: 1199px) {
+        font-size: 18px;
+    }
+
+    // Mobile
+    @media(max-width: 899px) {
+        margin-bottom: 28px;
+    }
 }
 
-.nav-list__item:hover {
+.header-menu__content li:last-child{
+    margin-right: 0;
+
+    @media (max-width: 1199px) {
+        margin-bottom: 0;
+    }
+}
+
+.header-menu__content li:hover {
     transform: scale(0.88);
     color: #030303;
+}
+
+.header-menu__contacts {
+    display: none; 
+    @media(max-width: 899px) {
+        display: block;
+    }
 }
 
 .header-social {
     display: flex;
     column-gap: 26px;
     align-items: center;
-}
 
-.header-logo {
-    display: none;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 100%; 
-}
-
-.header__burger-menu {
-    display: none;
-    position: relative;
-    width: 40px;
-    height: 25px;
-}
-
-.header__burger-menu span {
-    position: absolute;
-    width: 40px;
-    height: 5px;
-    background-color: #000;
-    left: 0;
-}
-
-.header__burger-menu span:nth-child(1) {
-    transform: translateY(-10px);
-}
-
-.header__burger-menu span:nth-child(3) {
-    transform: translateY(10px);
-}
-
-.socials {
-    display: none;
-}
-
-.link {
-    display: none;
-}
-
-
-/* Tablet */
-@media (max-width: 1199px) {
-    
-}
-
-/* Mobile */
-@media (max-width: 899px) {
-
-    .header-logo {
-        display: block;
-    }
-
-    .header-social {
+    @media(max-width: 899px) {
         display: none;
     }
-
-    .header__burger-menu {
-        display: block;
-    }
-
-
-    .nav {
-        width: 320px;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        right: 0;
-        top: 0;
-        background-color: blueviolet;
-        padding: 30px 15px 40px;
-
-        .nav-list {
-            display: block;
-        }
-
-    }
-
-    .socials {
-        display: flex;
-        column-gap: 20px
-    }
-
-    .svg-inst {
-        width: 40.5px;
-        height: 40.5px;
-    }
-
-    .link {
-        display: block;
-    };
 }
 
-/* Mobile XS */
-@media (max-width: 599px) {
-    
+.header-social a{
+    transition: all 0.4s ease-in;
 }
+
+.header-social a:hover{
+    transform: scale(0.88);
+}
+
+
+
+
+
