--- a/css/main.css
+++ b/css/main.css
@@ -193,10 +193,19 @@ body > * {
   align-items: center;
   column-gap: 30px;
 }
-@media (max-width: 899px) {
+@media (max-width: 1199px) {
   .socials {
     column-gap: 20px;
-    margin-bottom: 20px;
+  }
+}
+@media (max-width: 899px) {
+  .socials {
+    column-gap: 10px;
+  }
+}
+@media (max-width: 599px) {
+  .socials {
+    column-gap: 20px;
   }
 }
 
@@ -239,6 +248,12 @@ body > * {
   font-size: 22px;
   font-weight: 400;
   line-height: 1.6;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .link {
+    font-size: 18px;
+  }
 }
 
 /* Grid styles */
@@ -518,7 +533,7 @@ body > * {
 @media (max-width: 1199px) {
   .header-content-text {
     width: 420px;
-    margin-top: 8px;
+    margin-top: 4px;
   }
 }
 @media (max-width: 899px) {
@@ -620,6 +635,12 @@ body > * {
   display: flex;
   justify-content: center;
   margin-top: -156px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-content__banner {
+    margin-top: -86px;
+  }
 }
 @media (max-width: 599px) {
   .header-content__banner {
@@ -630,15 +651,48 @@ body > * {
 .header-skills {
   margin-top: -32px;
   padding-bottom: 90px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-skills {
+    margin-top: -10px;
+    padding-bottom: 60px;
+  }
 }
 
 .header-skills__wrapper {
   display: flex;
   column-gap: 31px;
 }
+@media (max-width: 899px) {
+  .header-skills__wrapper {
+    column-gap: 10px;
+  }
+}
+@media (max-width: 599px) {
+  .header-skills__wrapper {
+    flex-direction: column;
+  }
+}
 
 .header-skills__col:first-child {
   width: 635px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-skills__col:first-child {
+    width: 495px;
+  }
+}
+@media (max-width: 899px) {
+  .header-skills__col:first-child {
+    width: 340px;
+  }
+}
+@media (max-width: 599px) {
+  .header-skills__col:first-child {
+    margin-bottom: 30px;
+  }
 }
 
 .header-skills__col .h3 {
@@ -646,16 +700,45 @@ body > * {
   font-weight: 700;
   line-height: 1.3;
   margin-bottom: 30px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-skills__col .h3 {
+    font-size: 32px;
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 899px) {
+  .header-skills__col .h3 {
+    font-size: 24px;
+  }
 }
 
 .header-skills__list {
   font-size: 22px;
   font-weight: 400;
   line-height: 1.3;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-skills__list {
+    font-size: 18px;
+  }
+}
+@media (max-width: 899px) {
+  .header-skills__list {
+    font-size: 16px;
+  }
 }
 
 .header-skills__list li {
   margin-bottom: 11px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .header-skills__list li {
+    margin-bottom: 10px;
+  }
 }
 
 .header-skills__list li:last-child {
@@ -666,7 +749,7 @@ body > * {
   content: '\2014';
   margin-right: 5px;
 }
-@media (max-width: 1199px) {
+@media (max-width: 899px) {
   .header-skills__list li::before {
     display: none;
   }
@@ -674,6 +757,12 @@ body > * {
 
 .socials-wrapper {
   margin-bottom: 13px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .socials-wrapper {
+    margin-bottom: 18px;
+  }
 }
 
 #skills {
