--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -107,9 +107,17 @@ section {
     align-items: center;
     column-gap: 30px;
     // Mobile
-    @media(max-width: 899px) {
+    @media(max-width: 1199px) {
         column-gap: 20px;
-        margin-bottom: 20px;
+    }
+    // Mobile
+    @media(max-width: 899px) {
+        column-gap: 10px
+    }
+
+    // Mobile XS
+    @media(max-width: 599px) {
+        column-gap: 20px;
     }
 }
 
@@ -152,6 +160,10 @@ section {
     font-size: 22px;
     font-weight: 400;
     line-height: 1.6;
+    /* Tablet */
+    @media (max-width: 1199px) {
+        font-size: 18px;
+    }
 }
 
 /* Grid styles */
