--- a/sass/sections/_skills.scss
+++ b/sass/sections/_skills.scss
@@ -1,15 +1,45 @@
 .header-skills {
     margin-top: -32px;
     padding-bottom: 90px;
+    /* Tablet */
+    @media (max-width: 1199px) {
+        margin-top: -10px;
+        padding-bottom: 60px;
+    }
 }
 
 .header-skills__wrapper {
     display: flex;
     column-gap: 31px;
+
+    // Mobile
+    @media(max-width: 899px) {
+        column-gap: 10px;
+    }
+
+    // Mobile XS
+    @media(max-width: 599px) {
+        flex-direction: column;
+    }
 }
 
 .header-skills__col:first-child {
     width: 635px;
+
+    /* Tablet */
+    @media (max-width: 1199px) {
+        width: 495px;
+    }
+
+    // Mobile
+    @media(max-width: 899px) {
+        width: 340px;
+    }
+
+    // Mobile XS
+    @media(max-width: 599px) {
+        margin-bottom: 30px;
+    }
 }
 
 .header-skills__col .h3 {
@@ -17,16 +47,41 @@
     font-weight: 700;
     line-height: 1.3;
     margin-bottom: 30px;
+
+    /* Tablet */
+    @media (max-width: 1199px) {
+        font-size: 32px;
+        margin-bottom: 20px;
+    }
+
+    // Mobile
+    @media(max-width: 899px) {
+        font-size: 24px;
+    }
 }
 
 .header-skills__list {
     font-size: 22px;
     font-weight: 400;
     line-height: 1.3;
+
+    /* Tablet */
+    @media (max-width: 1199px) {
+        font-size: 18px;
+    }
+
+    // Mobile
+    @media(max-width: 899px) {
+        font-size: 16px;
+    }
 }
 
 .header-skills__list li{
     margin-bottom: 11px;
+    /* Tablet */
+    @media (max-width: 1199px) {
+        margin-bottom: 10px;
+    }
 }
 
 .header-skills__list li:last-child{
@@ -36,13 +91,18 @@
 .header-skills__list li::before{
     content: '\2014';
     margin-right: 5px;
-    @media (max-width: 1199px) {
+    @media (max-width: 899px) {
         display: none;
     }
 }
 
 .socials-wrapper {
     margin-bottom: 13px;
+
+    /* Tablet */
+    @media (max-width: 1199px) {
+        margin-bottom: 18px;
+    }
 }
 
 #skills {
