--- a/css/main.css
+++ b/css/main.css
@@ -220,10 +220,16 @@ body > * {
   background-position: center bottom 15px;
   background-size: 100% 10px;
   background-image: linear-gradient(to right, #FBDC4D, #FBDC4D);
+  /* Tablet */
 }
-@media (max-width: 599px) {
+@media (max-width: 1199px) {
   .grad-border {
-    background-position: center bottom 5px;
+    background-position: center bottom 10px;
+  }
+}
+@media (max-width: 899px) {
+  .grad-border {
+    background-position: center bottom 8px;
     background-size: 100% 8px;
   }
 }
@@ -242,6 +248,17 @@ body > * {
   font-size: 54px;
   font-weight: 700;
   line-height: 1.3;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .h2 {
+    font-size: 42px;
+  }
+}
+@media (max-width: 899px) {
+  .h2 {
+    font-size: 32px;
+  }
 }
 
 .link {
@@ -522,7 +539,7 @@ body > * {
 }
 @media (max-width: 599px) {
   .header-content__wrapper {
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
 }
 
@@ -569,17 +586,23 @@ body > * {
 }
 @media (max-width: 599px) {
   .header-content__title {
-    display: none;
+    margin-bottom: 20px;
   }
 }
 
-.header-content__title.mobile {
-  display: block;
-  font-size: 32px;
-  width: 220px;
-  margin-bottom: 20px;
+.visible-descr {
+  display: none;
 }
 
+@media (max-width: 599px) {
+  .header-content__descr {
+    display: none;
+  }
+
+  .visible-descr {
+    display: block;
+  }
+}
 .header-content__descr {
   font-size: 22px;
   font-style: normal;
@@ -786,23 +809,82 @@ body > * {
 .portfolio {
   padding: 80px 0 90px;
   background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio {
+    padding: 40px 0 60px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio {
+    padding: 30px 0 40px;
+  }
 }
 
 .portfolio-title {
   margin-bottom: 65px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-title {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-title {
+    margin-bottom: 30px;
+  }
 }
 
 .portofolio-wrapper {
   display: flex;
   flex-wrap: wrap;
   column-gap: 30px;
-  row-gap: 30px;
+  row-gap: 50px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portofolio-wrapper {
+    row-gap: 40px;
+  }
+}
+@media (max-width: 899px) {
+  .portofolio-wrapper {
+    row-gap: 20px;
+    column-gap: 15px;
+  }
+}
+@media (max-width: 599px) {
+  .portofolio-wrapper {
+    row-gap: 30px;
+  }
 }
 
 .portfolio-card .portfolio-card__img {
   margin-bottom: 16px;
   max-width: 350px;
   max-height: 220px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card .portfolio-card__img {
+    max-width: 270px;
+    max-height: 169px;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card .portfolio-card__img {
+    max-width: 180px;
+    max-height: 140px;
+  }
+}
+@media (max-width: 599px) {
+  .portfolio-card .portfolio-card__img {
+    max-width: 290px;
+    max-height: 180px;
+  }
 }
 .portfolio-card .portfolio-card__text {
   line-height: 1.3;
@@ -811,19 +893,61 @@ body > * {
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 6px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card .portfolio-card__text .h4 {
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card .portfolio-card__text .h4 {
+    font-size: 16px;
+    width: 180px;
+  }
 }
 .portfolio-card .portfolio-card__text p {
   font-size: 18px;
   font-weight: 400;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card .portfolio-card__text p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card .portfolio-card__text p {
+    width: 180px;
+    font-size: 10px;
+  }
 }
 
-.portfolio-card:first-child, .portfolio-card:nth-child(2) {
-  margin-bottom: 20px;
-}
 .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
-  margin-bottom: 20px;
   max-width: 540px;
   max-height: 370px;
+  margin-bottom: 20px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
+    max-width: 420px;
+    max-height: 288px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
+    max-width: 277.5px;
+    max-height: 180px;
+    margin-bottom: 10px;
+  }
+}
+@media (max-width: 599px) {
+  .portfolio-card:first-child .portfolio-card__img, .portfolio-card:nth-child(2) .portfolio-card__img {
+    max-width: 290px;
+    max-height: 180px;
+  }
 }
 .portfolio-card:first-child .portfolio-card__text, .portfolio-card:nth-child(2) .portfolio-card__text {
   line-height: 1.3;
@@ -832,10 +956,36 @@ body > * {
   font-size: 30px;
   font-weight: 600;
   margin-bottom: 8px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card:first-child .portfolio-card__text .h4, .portfolio-card:nth-child(2) .portfolio-card__text .h4 {
+    font-size: 24px;
+    margin-bottom: 6px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card:first-child .portfolio-card__text .h4, .portfolio-card:nth-child(2) .portfolio-card__text .h4 {
+    font-size: 18px;
+    width: 100%;
+    margin-bottom: 4px;
+  }
 }
 .portfolio-card:first-child .portfolio-card__text p, .portfolio-card:nth-child(2) .portfolio-card__text p {
   font-size: 20px;
   font-weight: 400;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .portfolio-card:first-child .portfolio-card__text p, .portfolio-card:nth-child(2) .portfolio-card__text p {
+    font-size: 16px;
+  }
+}
+@media (max-width: 899px) {
+  .portfolio-card:first-child .portfolio-card__text p, .portfolio-card:nth-child(2) .portfolio-card__text p {
+    width: 100%;
+    font-size: 14px;
+  }
 }
 
 .timeline {
