--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -133,11 +133,16 @@ section {
     background-size: 100% 10px;
     background-image: linear-gradient(to right, $accent-color, $accent-color);
 
-    // Mobile XS
-    @media(max-width: 599px) {
-        background-position: center bottom 5px;
+    /* Tablet */
+    @media (max-width: 1199px) {
+        background-position: center bottom 10px;
+    }
+    // Mobile
+    @media(max-width: 899px) {
+        background-position: center bottom 8px;
         background-size: 100% 8px;
     }
+
 }
 
 .h2.grad-border {
@@ -154,6 +159,15 @@ section {
     font-size: 54px;
     font-weight: 700;
     line-height: 1.3; 
+    /* Tablet */
+    @media (max-width: 1199px) {
+        font-size: 42px;
+    }
+
+    // Mobile
+    @media(max-width: 899px) {
+        font-size: 32px;
+    }
 }
 
 .link {
@@ -185,8 +199,6 @@ section {
         padding: 0;
     }
 
-    
-
     /* Tablet */
     @media (max-width: 1199px) {
         width: 900px;
@@ -202,20 +214,6 @@ section {
         width: 320px;
     }
 
-        // /* Tablet big*/
-        // @media (max-width: 1139px) {
-        //     width: 900px;
-        // }
-    
-        // /* Tablet */
-        // @media (max-width: 899px) {
-        //     width: 768px;
-        // }
-    
-        // /* Mobile */
-        // @media (max-width: 767px) {
-        //     width: 320px;
-        // }
 }
 
 /* Mobile */
@@ -224,13 +222,6 @@ section {
         width: 100%;
     }
 }
-
-
-// button {
-//     background-color: $accent-color;
-//     border-radius: 50%;
-// }
-
 
 /* Utility */
 
