--- a/css/main.css
+++ b/css/main.css
@@ -519,6 +519,17 @@ body > * {
   background-color: #333333;
   padding: 40px 0 50px;
   color: #fff;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .footer {
+    padding: 30px 0;
+  }
+}
+@media (max-width: 599px) {
+  .footer {
+    padding: 40px 0 30px;
+  }
 }
 
 .footer__corypthing p:first-child {
@@ -528,10 +539,21 @@ body > * {
   line-height: 1.4;
   margin-bottom: 10px;
 }
+@media (max-width: 599px) {
+  .footer__corypthing p:first-child {
+    margin-bottom: 0;
+  }
+}
 .footer__corypthing p {
   color: #B0B0B0;
   font-size: 16px;
   line-height: 1.5;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .footer__corypthing p {
+    font-size: 14px;
+  }
 }
 .footer__corypthing a {
   font-size: 16px;
@@ -1195,20 +1217,98 @@ body > * {
   position: relative;
   padding: 70px 0 90px;
   background: linear-gradient(0deg, #F5FBFF 0%, #F5FBFF 100%), #F4F8F9;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts {
+    padding: 40px 0 70px;
+  }
+}
+@media (max-width: 899px) {
+  .contacts {
+    padding-bottom: 40px;
+  }
+}
+
+.contacts-title {
+  text-align: center;
+  margin-bottom: 60px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts-title {
+    margin-bottom: 40px;
+  }
+}
+@media (max-width: 899px) {
+  .contacts-title {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 599px) {
+  .contacts-title {
+    margin-bottom: 40px;
+  }
 }
 
 .contacts-wrapper {
   display: flex;
   column-gap: 69px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts-wrapper {
+    column-gap: 74px;
+  }
+}
+@media (max-width: 599px) {
+  .contacts-wrapper {
+    flex-direction: column-reverse;
+  }
 }
 
 .contacts__col {
   position: relative;
 }
+@media (max-width: 899px) {
+  .contacts__col {
+    width: 270px;
+  }
+}
+@media (max-width: 599px) {
+  .contacts__col {
+    width: 100%;
+  }
+}
 
 .contacts-list__item {
   display: flex;
   margin-bottom: 22px;
+}
+@media (max-width: 899px) {
+  .contacts-list__item {
+    display: block;
+  }
+}
+@media (max-width: 599px) {
+  .contacts-list__item {
+    margin-bottom: 10px;
+  }
+}
+
+.contacts-list__item .link {
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts-list__item .link {
+    min-width: 120px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 899px) {
+  .contacts-list__item .link {
+    font-size: 16px;
+  }
 }
 
 .contacts-list__item span {
@@ -1216,6 +1316,19 @@ body > * {
   font-size: 22px;
   font-weight: 600;
   line-height: 1.6;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts-list__item span {
+    min-width: 120px;
+    font-size: 18px;
+  }
+}
+@media (max-width: 899px) {
+  .contacts-list__item span {
+    font-size: 16px;
+    display: block;
+  }
 }
 
 .contacts-list__item:last-child {
@@ -1223,13 +1336,38 @@ body > * {
 }
 
 .contact-socials {
-  margin-top: 34px;
+  margin-top: 32px;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contact-socials {
+    margin-top: 25px;
+  }
 }
 
 .contacts-text {
   width: 538px;
   font-size: 18px;
   line-height: 1.6;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts-text {
+    width: 100%;
+    font-size: 16px;
+  }
+}
+@media (max-width: 899px) {
+  .contacts-text {
+    width: 270px;
+    font-size: 14px;
+  }
+}
+@media (max-width: 599px) {
+  .contacts-text {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 .contacts__col:last-child::before {
@@ -1241,6 +1379,17 @@ body > * {
   background-image: url("../img/before/contacts.png");
   top: -60%;
   right: -20%;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .contacts__col:last-child::before {
+    right: 0;
+  }
+}
+@media (max-width: 899px) {
+  .contacts__col:last-child::before {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
