--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -2,6 +2,16 @@
 	background-color: #333333;
 	padding: 40px 0 50px;
     color: #fff;
+
+	/* Tablet */
+	@media (max-width: 1199px) {
+		padding: 30px 0;
+	}
+
+	// Mobile XS
+	@media(max-width: 599px) {
+		padding: 40px 0 30px;
+	}
 }	
 
 
@@ -11,13 +21,22 @@
 		display: block;
 		font-size: 16px;
 		line-height: 1.4; 
-		margin-bottom: 10px;	
+		margin-bottom: 10px;
+		
+		// Mobile XS
+		@media(max-width: 599px) {
+			margin-bottom: 0;
+		}
 	}
 
 	p {
 		color: #B0B0B0;
 		font-size: 16px;
 		line-height: 1.5;
+		/* Tablet */
+		@media (max-width: 1199px) {
+			font-size: 14px;
+		}
 	}
 
 	a {
