--- a/sass/sections/_contacts.scss
+++ b/sass/sections/_contacts.scss
@@ -124,6 +124,10 @@
     @media (max-width: 1199px) {
         margin-top: 25px;
     }
+
+    .socials li{
+        display: flex;
+    }
 }
 
 .contacts-text {
