--- a/css/main.css
+++ b/css/main.css
@@ -379,33 +379,35 @@ body > * {
 @media (max-width: 899px) {
   .toggle-menu {
     z-index: 6;
-    position: absolute;
-    right: 15px;
+    position: relative;
     width: 40px;
-    height: 25px;
+    height: 5px;
+    background-color: #000;
     cursor: pointer;
   }
-  .toggle-menu span {
+  .toggle-menu::before, .toggle-menu::after {
+    content: "";
     position: absolute;
+    left: 0;
     width: 40px;
     height: 5px;
     background-color: #000;
     transition: transform 0.4s, opacity 0.4s, background-color 0.4s;
   }
-  .toggle-menu span:nth-child(1) {
+  .toggle-menu::before {
+    transform: translateY(-10px);
+  }
+  .toggle-menu::after {
     transform: translateY(10px);
   }
-  .toggle-menu span:nth-child(3) {
-    transform: translateY(20px);
+  .toggle-menu.active {
+    background-color: transparent;
   }
-  .toggle-menu.active span:nth-child(2) {
-    transform: translateY(10px) rotate(45deg);
+  .toggle-menu.active::before {
+    transform: rotate(-45deg);
   }
-  .toggle-menu.active span:nth-child(1) {
-    opacity: 0;
-  }
-  .toggle-menu.active span:nth-child(3) {
-    transform: translateY(10px) rotate(-45deg);
+  .toggle-menu.active::after {
+    transform: rotate(45deg);
   }
 }
 .header-logo, .toggle-menu {
@@ -1343,6 +1345,9 @@ body > * {
   .contact-socials {
     margin-top: 25px;
   }
+}
+.contact-socials .socials li {
+  display: flex;
 }
 
 .contacts-text {
