--- a/css/main.css
+++ b/css/main.css
@@ -198,20 +198,9 @@ body > * {
     column-gap: 20px;
   }
 }
-@media (max-width: 899px) {
-  .socials {
-    column-gap: 10px;
-  }
-}
-@media (max-width: 599px) {
-  .socials {
-    column-gap: 20px;
-  }
-}
 
-.flex-wrapper {
+.socials li {
   display: flex;
-  justify-content: space-between;
 }
 
 .grad-border {
@@ -233,6 +222,32 @@ body > * {
     background-size: 100% 8px;
   }
 }
+@media (max-width: 599px) {
+  .grad-border {
+    background-position: center bottom 5px;
+  }
+}
+
+.h1 {
+  font-size: 78px;
+  font-weight: 700;
+  line-height: 1;
+}
+@media (max-width: 1199px) {
+  .h1 {
+    font-size: 58px;
+  }
+}
+@media (max-width: 899px) {
+  .h1 {
+    font-size: 42px;
+  }
+}
+@media (max-width: 599px) {
+  .h1 {
+    font-size: 32px;
+  }
+}
 
 .h2.grad-border {
   background-position: center bottom 10px;
@@ -250,11 +265,6 @@ body > * {
   }
 }
 
-.h3.grad-border {
-  background-position: center bottom 8px;
-  background-size: 100% 6px;
-}
-
 .h2 {
   font-size: 54px;
   font-weight: 700;
@@ -269,6 +279,23 @@ body > * {
 @media (max-width: 899px) {
   .h2 {
     font-size: 32px;
+  }
+}
+
+.h3 {
+  font-size: 42px;
+  font-weight: 700;
+  line-height: 1.3;
+  /* Tablet */
+}
+@media (max-width: 1199px) {
+  .h3 {
+    font-size: 32px;
+  }
+}
+@media (max-width: 899px) {
+  .h3 {
+    font-size: 24px;
   }
 }
 
@@ -461,11 +488,12 @@ body > * {
   font-size: 20px;
   font-weight: 600;
   line-height: 1.3;
-  margin-right: 50px;
+  margin-right: 100px;
   transition: all 0.4s ease-in;
 }
 @media (max-width: 1199px) {
   .header-menu__content li {
+    margin-right: 50px;
     font-size: 18px;
   }
 }
@@ -602,25 +630,21 @@ body > * {
 }
 
 .header-content__title {
-  font-size: 78px;
-  font-weight: 700;
-  line-height: 1;
   margin-bottom: 30px;
 }
 @media (max-width: 1199px) {
   .header-content__title {
-    font-size: 58px;
     margin-bottom: 20px;
   }
 }
 @media (max-width: 899px) {
   .header-content__title {
-    font-size: 42px;
     margin-bottom: 10px;
   }
 }
 @media (max-width: 599px) {
   .header-content__title {
+    width: 220px;
     margin-bottom: 20px;
   }
 }
@@ -719,6 +743,10 @@ body > * {
   }
 }
 
+#skills {
+  scroll-margin-top: 100px;
+}
+
 .header-skills {
   margin-top: -32px;
   padding-bottom: 90px;
@@ -768,21 +796,12 @@ body > * {
 }
 
 .header-skills__col .h3 {
-  font-size: 42px;
-  font-weight: 700;
-  line-height: 1.3;
   margin-bottom: 30px;
   /* Tablet */
 }
 @media (max-width: 1199px) {
   .header-skills__col .h3 {
-    font-size: 32px;
     margin-bottom: 20px;
-  }
-}
-@media (max-width: 899px) {
-  .header-skills__col .h3 {
-    font-size: 24px;
   }
 }
 
@@ -835,10 +854,6 @@ body > * {
   .socials-wrapper {
     margin-bottom: 18px;
   }
-}
-
-#skills {
-  scroll-margin-top: 100px;
 }
 
 .portfolio {
@@ -900,6 +915,8 @@ body > * {
   margin-bottom: 16px;
   max-width: 350px;
   max-height: 220px;
+  object-fit: cover;
+  object-position: center;
   /* Tablet */
 }
 @media (max-width: 1199px) {
@@ -1337,17 +1354,14 @@ body > * {
   margin-bottom: 0;
 }
 
-.contact-socials {
+.contacts-socials {
   margin-top: 32px;
   /* Tablet */
 }
 @media (max-width: 1199px) {
-  .contact-socials {
+  .contacts-socials {
     margin-top: 25px;
   }
-}
-.contact-socials .socials li {
-  display: flex;
 }
 
 .contacts-text {
@@ -1364,7 +1378,7 @@ body > * {
 }
 @media (max-width: 899px) {
   .contacts-text {
-    width: 270px;
+    width: 100%;
     font-size: 14px;
   }
 }
