--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,10 +29,10 @@ body > * {
 	flex-shrink: 0; /* sticky footer */
 }
 
-section {
+// section {
     
-	// position: relative;
-}
+// position: relative;
+// }
 
 .svg-git {
     width: 42px;
@@ -65,6 +65,7 @@ section {
         height: 38px;
     }
 }
+
 
 .btn {
     color: #000;
@@ -110,20 +111,10 @@ section {
     @media(max-width: 1199px) {
         column-gap: 20px;
     }
-    // Mobile
-    @media(max-width: 899px) {
-        column-gap: 10px
-    }
-
-    // Mobile XS
-    @media(max-width: 599px) {
-        column-gap: 20px;
-    }
 }
 
-.flex-wrapper {
+.socials li {
     display: flex;
-    justify-content: space-between;
 }
 
 .grad-border {
@@ -137,12 +128,36 @@ section {
     @media (max-width: 1199px) {
         background-position: center bottom 10px;
     }
+    
     // Mobile
     @media(max-width: 899px) {
         background-position: center bottom 8px;
         background-size: 100% 8px;
     }
 
+    // Mobile XS
+    @media(max-width: 599px) {
+        background-position: center bottom 5px;
+    }
+
+}
+
+.h1 {
+    font-size: 78px;
+    font-weight: 700;
+    line-height: 1; 
+    @media (max-width: 1199px) {
+        font-size: 58px;
+    }
+    // Mobile
+    @media(max-width: 899px) {
+        font-size: 42px;
+    }
+
+    // Mobile XS
+    @media(max-width: 599px) {
+        font-size: 32px;
+    }
 }
 
 .h2.grad-border {
@@ -160,10 +175,6 @@ section {
     }
 }
 
-.h3.grad-border {
-    background-position: center bottom 8px;
-    background-size: 100% 6px;
-}
 
 .h2 {
     font-size: 54px;
@@ -177,6 +188,20 @@ section {
     // Mobile
     @media(max-width: 899px) {
         font-size: 32px;
+    }
+}
+
+.h3 {
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 1.3;
+    /* Tablet */
+    @media (max-width: 1199px) {
+        font-size: 32px;
+    }
+    // Mobile
+    @media(max-width: 899px) {
+        font-size: 24px;
     }
 }
 
