--- a/sass/sections/_header-content.scss
+++ b/sass/sections/_header-content.scss
@@ -33,22 +33,18 @@
 }
 
 .header-content__title {
-    font-size: 78px;
-    font-weight: 700;
-    line-height: 1; 
     margin-bottom: 30px;
     @media (max-width: 1199px) {
-        font-size: 58px;
         margin-bottom: 20px;
     }
     // Mobile
     @media(max-width: 899px) {
-        font-size: 42px;
         margin-bottom: 10px;
     }
 
     // Mobile XS
     @media(max-width: 599px) {
+        width: 220px;
         margin-bottom: 20px;
     }
 }
